crates/math-core/tests/snapshots/custom_cmd_test__gdef.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\gdef\\zz{z}\n\\zz"
---
<math>
    <mi>z</mi>
</math>
