crates/math-core/tests/snapshots/custom_cmd_test__gdef_beats_local_next_snippet.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\a"
---
<math>
    <mi>α</mi>
</math>
