crates/math-core/tests/snapshots/custom_cmd_test__gdef_body_refers_to_local_cmd.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\zzz}{z}\\gdef\\g{\\zzz}\n\\newcommand{\\zzz}{q}\\g"
---
<math>
    <mi>q</mi>
</math>
