crates/math-core/tests/snapshots/custom_cmd_test__gdef_late_binding.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\def\\inner{y}\\g"
---
<math>
    <mi>y</mi>
    <mo>+</mo>
    <mn>1</mn>
</math>
