crates/math-core/tests/snapshots/custom_cmd_test__gdef_with_args.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\gdef\\bb#1{\\mathbb{#1}}\n\\bb{C}"
---
<math>
    <mi>ℂ</mi>
</math>
