crates/math-core/tests/snapshots/custom_cmd_test__global_def.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\global\\def\\add#1#2{#1+#2}\n\\add 2 3"
---
<math>
    <mn>2</mn>
    <mo>+</mo>
    <mn>3</mn>
</math>
