crates/math-core/tests/snapshots/custom_cmd_test__global_gdef.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\global\\gdef\\a{\\alpha}\n\\a"
---
<math>
    <mi>α</mi>
</math>
