crates/math-core/tests/snapshots/custom_cmd_test__global_global_def.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\global\\global\\def\\a{\\alpha}\n\\a"
---
<math>
    <mi>α</mi>
</math>
