crates/math-core/tests/snapshots/custom_cmd_test__global_let_chain.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\m}[1]{\\sqrt{#1}}\\let\\n\\m\\global\\let\\o\\n\n\\o{2}"
---
<math>
    <msqrt>
        <mn>2</mn>
    </msqrt>
</math>
